--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ relative_permalinks: false
 # Setup
 title:            Sofie Kalinke
 tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'Human Factors Engineer und UX Designer from Munich. Contact me at sofie@kalinke.de>.'
 url:              http://hyde.getpoole.com
 baseurl:          /
 
